--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
   <repositories>
       <repository>
           <id>refine-public</id>
-          <url>https://maven.refinedev.xyz/maven/public/</url>
+          <url>https://maven.refinedev.xyz/repository/refine-public/</url>
       </repository>
       <repository>
           <id>jitpack.io</id>
